# NanoInfer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  development.md  main.cpp
demo/: CMakeLists.txt  batched_infer_multi_prompts.cpp  batched_infer_multi_prompts_cpu.cpp  chat_demo.cpp  llama.cpp  llama2.cpp  llama2_cpu.cpp  prefix_caching_benchmark.cpp  qwen3_batched_infer.cpp  sampling_strategies_demo.cpp
docs/: optimization_roadmap.md
eval/: README.md  hf_verify.py  requirements.txt
include/nanoinfer/base/: alloc.h  base.h  buffer.h  cuda_config.h  tick.h
include/nanoinfer/engine/: block_manager.h  block_table.h  engine.h  inference_request.h  kv_cache_manager.h  scheduler.h
include/nanoinfer/model/: config.h  llama.h  model.h  qwen3.h  raw_model_data.h
include/nanoinfer/op/: add.h  attention.h  embedding.h  encode.h  layer.h  matmul.h  mha.h  paged_attention.h  rmsnorm.h  rope.h  swiglu.h
include/nanoinfer/sampler/: argmax_sampler.h  configurable_sampler.h  sampler.h  sampling_params.h
include/nanoinfer/tensor/: tensor.h
kuiper/include/base/: alloc.h  base.h  buffer.h  cuda_config.h
kuiper/include/op/: add.h  layer.h  rmsnorm.h
kuiper/include/tensor/: tensor.h
kuiper/source/base/: alloc.cpp  alloc_cpu.cpp  alloc_cuda.cpp  base.cpp  buffer.cpp
kuiper/source/op/: add.cpp  layer.cpp  rmsnorm.cpp
kuiper/source/op/kernels/: kernels_interface.cpp  kernels_interface.h
kuiper/source/op/kernels/cpu/: add_kernel.cpp  add_kernel.h  rmsnorm_kernel.h
kuiper/source/op/kernels/cuda/: add_kernel.cuh  rmsnorm_kernel.cu  rmsnorm_kernel.cuh
kuiper/source/tensor/: tensor.cpp
src/base/: alloc.cpp  alloc_cpu.cpp  alloc_cuda.cpp  base.cpp  buffer.cpp
src/engine/: block_manager.cpp  block_table.cpp  engine.cpp  inference_request.cpp  kv_cache_manager.cpp  scheduler.cpp
src/model/: llama.cpp  model.cpp  qwen3.cpp  raw_model_data.cpp
src/op/: add.cpp  attention.cpp  embedding.cpp  encode.cpp  layer.cpp  matmul.cpp  mha.cpp  paged_attention.cpp  rmsnorm.cpp  rope.cpp  swiglu.cpp
src/op/kernels/: kernel_registry.h  kernel_types.h  kernels_interface.cpp  kernels_interface.h
src/op/kernels/cpu/: add_kernel.cpp  add_kernel.h  argmax_kernel.cpp  argmax_kernel.h  embedding_kernel.cpp  embedding_kernel.h  matmul_kernel.cpp  matmul_kernel.h  mha_kernel.cpp  mha_kernel.h  paged_attention_kernel.cpp  paged_attention_kernel.h  paged_kv_write_kernel.cpp  paged_kv_write_kernel.h  prefill_attention_kernel.cpp  prefill_attention_kernel.h  rmsnorm_kernel.cpp  rmsnorm_kernel.h  rope_kernel.cpp  rope_kernel.h  sampling_kernel.cpp  scale_kernel.cpp  scale_kernel.h  scale_sum_kernel.cpp  scale_sum_kernel.h  softmax.cpp  softmax.h  softmax_kernel.cpp  softmax_kernel.h  swiglu_kernel.cpp  swiglu_kernel.h
src/op/kernels/cuda/: add_kernel.cu  add_kernel.cuh  argmax_kernel.cu  argmax_kernel.cuh  embedding_kernel.cu  embedding_kernel.cuh  matmul_kernel.cu  matmul_kernel.cuh  paged_attention_kernel.cu  paged_attention_kernel.cuh  paged_kv_write_kernel.cuh  paged_kv_writed_kernel.cu  prefill_attention_kernel.cu  prefill_attention_kernel.cuh  rmsnorm_kernel.cu  rmsnorm_kernel.cuh  rope_kernel.cu  rope_kernel.cuh  sampling_kernel.cu  swiglu_kernel.cu  swiglu_kernel.cuh
src/sampler/: argmax_sampler.cpp  configurable_sampler.cpp
src/tensor/: tensor.cpp
test/: CMakeLists.txt  test_buffer.cpp  test_main.cpp  test_math.cpp  utils.cu
test/optimized/: test_allocator.cpp
test/test_base/: test_alloc.cpp  test_buffer.cpp  test_tensor.cpp
test/test_cu_ops/: test_add_kernel.cpp  test_argmax_kernel.cpp  test_embedding_kernel.cpp  test_matmul_kernel.cpp  test_paged_attention_kernel.cpp  test_paged_kv_write_kernel.cpp  test_rmsnorm_kernel.cpp  test_rope_kernel.cpp  test_swiglu_kernel.cpp
test/test_cuda_kernel/: test_add_kernel.cpp  test_matmul_kernel.cpp  test_paged_attention_kernel.cpp  test_rmsnorm_kernel.cpp  test_rope_kernel.cpp  test_swiglu_kernel.cpp
test/test_engine/: test_block_manager.cpp  test_block_table.cpp  test_engine.cpp  test_kv_cache_manager.cpp  test_prefix_caching.cpp  test_sampling.cpp  test_scheduler.cpp
test/test_model/: check_header_v0.py  test_llama_cpu.cpp  test_tinyllama.cpp  tinyllama.txt
test/test_op/: layer_test_utils.h  test_cu_add.cpp  test_cu_emb.cpp  test_cu_matmul.cpp  test_cu_rmsnorm.cpp  test_cu_swiglu.cpp  test_layer_add.cpp  test_layer_base.cpp  test_layer_embedding.cpp  test_layer_encode.cpp  test_layer_matmul.cpp  test_layer_rmsnorm.cpp  test_layer_swiglu.cpp  test_load.cpp
test/test_tensor/: test_base.cpp  test_buffer.cpp  test_tensor.cpp
tools/: export_llama3.py  export_models.sh  model.py  run.sh
tools/export_qwen3/: write_bin.py
tools/vscode_json_example/: c_cpp_properties.json.example  launch.json.example
