add_executable(llama_infer llama.cpp)
target_link_directories(llama_infer PUBLIC ${PROJECT_SOURCE_DIR}/lib)
target_link_libraries(llama_infer llama)

set_target_properties(llama_infer PROPERTIES CUDA_SEPARABLE_COMPILATION ON)

add_executable(batched_infer_multi_prompts batched_infer_multi_prompts.cpp)
target_link_directories(batched_infer_multi_prompts PUBLIC ${PROJECT_SOURCE_DIR}/lib)
target_link_libraries(batched_infer_multi_prompts llama)

set_target_properties(batched_infer_multi_prompts PROPERTIES CUDA_SEPARABLE_COMPILATION ON)

add_executable(llama2_cpu_infer llama2_cpu.cpp)
target_link_directories(llama2_cpu_infer PUBLIC ${PROJECT_SOURCE_DIR}/lib)
target_link_libraries(llama2_cpu_infer llama)

set_target_properties(llama2_cpu_infer PROPERTIES CUDA_SEPARABLE_COMPILATION ON)

add_executable(batched_infer_multi_prompts_cpu batched_infer_multi_prompts_cpu.cpp)
target_link_directories(batched_infer_multi_prompts_cpu PUBLIC ${PROJECT_SOURCE_DIR}/lib)
target_link_libraries(batched_infer_multi_prompts_cpu llama)
set_target_properties(batched_infer_multi_prompts_cpu PROPERTIES CUDA_SEPARABLE_COMPILATION ON)

add_executable(prefix_caching_benchmark prefix_caching_benchmark.cpp)
target_link_directories(prefix_caching_benchmark PUBLIC ${PROJECT_SOURCE_DIR}/lib)
target_link_libraries(prefix_caching_benchmark llama)
set_target_properties(prefix_caching_benchmark PROPERTIES CUDA_SEPARABLE_COMPILATION ON)

add_executable(sampling_strategies_demo sampling_strategies_demo.cpp)
target_link_directories(sampling_strategies_demo PUBLIC ${PROJECT_SOURCE_DIR}/lib)
target_link_libraries(sampling_strategies_demo llama)
set_target_properties(sampling_strategies_demo PROPERTIES CUDA_SEPARABLE_COMPILATION ON)

add_executable(chat_demo chat_demo.cpp)
target_link_directories(chat_demo PUBLIC ${PROJECT_SOURCE_DIR}/lib)
target_link_libraries(chat_demo llama)
set_target_properties(chat_demo PROPERTIES CUDA_SEPARABLE_COMPILATION ON)